--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.11.0",
-    "prop-types": "^15.6.2",
+    "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
@@ -31,8 +31,11 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "axios": "^0.15.0",
+    "jquery": "^3.4.1",
+    "react": "^16.8.6",
+    "react-axios": "^2.0.3",
+    "react-dom": "^16.8.6",
     "react-redux": "^5.0.7",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
