--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "react": "^16.8.6",
     "react-axios": "^2.0.3",
     "react-dom": "^16.8.6",
+    "react-google-recaptcha": "^1.0.5",
     "react-redux": "^5.0.7",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-toastify": "^5.1.0",
     "redux": "^4.0.0"
   }
 }
