【更新】FB登入測試 + 介面優化
- 測試FB登入元件
- 電腦版發文視窗加上最大寬度和底層 mask 遮罩
- 在發文視窗開啟狀態鎖定視窗不滑動
- 發文送出後自動關閉發文視窗

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.8.6",
     "react-axios": "^2.0.3",
     "react-dom": "^16.8.6",
+    "react-facebook": "^8.0.4",
     "react-google-recaptcha": "^1.0.5",
     "react-redux": "^5.0.7",
     "react-router": "^5.0.0",
