【更新】FB登入彈跳視窗
- 廢文版區如果尚未登入，點擊發文會出現FB登入的彈跳視窗
- 登入資訊頁如果尚未登入，點擊發文會出現FB登入的彈跳視窗

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "react-bootstrap": "^1.0.0-beta.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
@@ -35,6 +36,7 @@
     "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-axios": "^2.0.3",
+    "react-cookie": "^4.0.0",
     "react-dom": "^16.8.6",
     "react-facebook": "^8.0.4",
     "react-google-recaptcha": "^1.0.5",
